Replaced hard coded url's. Done.

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DIF/difForm.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DIF/difForm.html.twig
@@ -1,4 +1,9 @@
-<form id="difForm" action="{{ path('pelagos_api_difs_post') }}" method="post">
+<form id="difForm" 
+      action="{{ path('pelagos_api_difs_post') }}" 
+      method="post" 
+      researchgroup="{{ path('pelagos_api_research_groups_get_collection') }}"
+      personresearchgroup="{{ path('pelagos_api_person_research_groups_get_collection') }}"
+>
     <input type="hidden" id="id" name="id">
     <input type="hidden" id="status" name="status" value="0">
     <input type="hidden" id="projectid" name="projectid">
