--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DIF/difUnlockReq.email.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DIF/difUnlockReq.email.twig
@@ -5,7 +5,7 @@
 {% block body_html %}
     Dear DIF Approver(s),<br>
     <br>
-    Please unlock DIF: <a href="{{url}}">{{udi}}</a>.<br>
+    Please unlock DIF: <a href="{{ url('pelagos_app_ui_dif_default') }}"?id={{udi}}>{{udi}}</a>.<br>
     <br>
     Thank you,<br>
     The GRIIDC Team<br>
@@ -14,7 +14,7 @@
 {% block body_text %}
 Dear DIF Approver(s),
 
-Please unlock DIF: <a href="{{url}}">{{udi}}</a>.
+Please unlock DIF: {{ url('pelagos_app_ui_dif_default') }}?id={{udi}} .
 
 Thank you,
 The GRIIDC Team
