--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DIF/submit.drpm.email.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DIF/submit.drpm.email.twig
@@ -2,7 +2,7 @@
 Dear {{ person.getFirstName }} {{ person.getLastName }},
 <br />
 <br />
-A Dataset Information Form (DIF) <a href="{{ url('pelagos_app_ui_dif_default') }}">{{udi}}</a> has
+A Dataset Information Form (DIF) <a href="{{ url('pelagos_app_ui_dif_default') }}"?id={{udi}}>{{udi}}</a> has
 been submitted for review.  You are being notified as you are identified as having the role of
 Data Repository Manager.
 <br />
@@ -14,7 +14,7 @@ The GRIIDC Team
 {% block body_text %}
 Dear {{ person.getFirstName }} {{ person.getLastName }},
 
-A Dataset Information Form (DIF) {{ url('pelagos_app_ui_dif_default') }}  has been submitted
+A Dataset Information Form (DIF) {{ url('pelagos_app_ui_dif_default') }}?id={{udi}} has been submitted
 for review.  You are being notified as you are identified as having the role of Data Repository
 Manager.
 
