--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DIF/submit.email.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DIF/submit.email.twig
@@ -5,7 +5,7 @@
 {% block body_html %}
 Dear {{ person.getFirstName }} {{ person.getLastName }},<br>
 <br>
-Thank you for submitting your Dataset Information Form (DIF) <a href="{{ url('pelagos_app_ui_dif_default') }}">{{udi}}</a>.<br>
+Thank you for submitting your Dataset Information Form (DIF) <a href="{{ url('pelagos_app_ui_dif_default') }}"?id={{udi}}>{{udi}}</a>.<br>
 Your DIF is now being reviewed by staff at the Gulf of Mexico Research Initiative Information and Data Cooperative (GRIIDC). You will receive an e-mail notification once your DIF has been approved.<br>
 <br>
 Thank you,<br>
@@ -15,7 +15,7 @@ The GRIIDC Team<br>
 {% block body_text %}
 Dear {{ person.getFirstName }} {{ person.getLastName }},
 
-Thank you for submitting your Dataset Information Form (DIF) <a href="{{ url('pelagos_app_ui_dif_default') }}">{{udi}}</a>.
+Thank you for submitting your Dataset Information Form (DIF) {{ url('pelagos_app_ui_dif_default') }}?id={{udi}} .
 Your DIF is now being reviewed by staff at the Gulf of Mexico Research Initiative Information and Data Cooperative (GRIIDC). You will receive an e-mail notification once your DIF has been approved.
 
 Thank you,
