--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DIF/reviewDIF.email.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DIF/reviewDIF.email.twig
@@ -1,18 +1,16 @@
-{% block sender 'GRIIDC <griidc@gomri.org>' %}
-
 {% block subject '[GRIIDC] DIF Unlocked Request' %}
 
 {% block body_html %}
-Dear DIF Approver(s),<br><br>
-Please review DIF: <a href="{{ url('pelagos_app_ui_dif_default') }}"?id={{udi}}>{{udi}}</a>.<br>
-<br>
-Thank you,<br>The GRIIDC Team<br>
+Dear DIF Approver(s),<br /><br />
+Please review DIF: <a href="{{ url('pelagos_app_ui_dif_default') }}?id={{udi}}">{{udi}}</a>.<br />
+<br />
+Thank you,<br />The GRIIDC Team<br />
 {% endblock %}
 
 {% block body_text %}
 Dear DIF Approver(s),
 
-Please review DIF: {{ url('pelagos_app_ui_dif_default') }}?id={{udi}} .
+Please review DIF: {{ url('pelagos_app_ui_dif_default') }}?id={{udi}}
 
 Thank you,
 The GRIIDC Team
