--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DIF/submit.email.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DIF/submit.email.twig
@@ -1,21 +1,19 @@
-{% block sender 'GRIIDC <griidc@gomri.org>' %}
-
 {% block subject '[GRIIDC] DIF Unlocked Request' %}
 
 {% block body_html %}
-Dear {{ person.getFirstName }} {{ person.getLastName }},<br>
-<br>
-Thank you for submitting your Dataset Information Form (DIF) <a href="{{ url('pelagos_app_ui_dif_default') }}"?id={{udi}}>{{udi}}</a>.<br>
-Your DIF is now being reviewed by staff at the Gulf of Mexico Research Initiative Information and Data Cooperative (GRIIDC). You will receive an e-mail notification once your DIF has been approved.<br>
-<br>
-Thank you,<br>
-The GRIIDC Team<br>
+Dear {{ person.getFirstName }} {{ person.getLastName }},<br />
+<br />
+Thank you for submitting your Dataset Information Form (DIF) <a href="{{ url('pelagos_app_ui_dif_default') }}?id={{udi}}">{{udi}}</a>.<br />
+Your DIF is now being reviewed by staff at the Gulf of Mexico Research Initiative Information and Data Cooperative (GRIIDC). You will receive an e-mail notification once your DIF has been approved.<br />
+<br />
+Thank you,<br />
+The GRIIDC Team<br />
 {% endblock %}
 
 {% block body_text %}
 Dear {{ person.getFirstName }} {{ person.getLastName }},
 
-Thank you for submitting your Dataset Information Form (DIF) {{ url('pelagos_app_ui_dif_default') }}?id={{udi}} .
+Thank you for submitting your Dataset Information Form (DIF) {{ url('pelagos_app_ui_dif_default') }}?id={{udi}}
 Your DIF is now being reviewed by staff at the Gulf of Mexico Research Initiative Information and Data Cooperative (GRIIDC). You will receive an e-mail notification once your DIF has been approved.
 
 Thank you,
