Some forgotten styleing issues.

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DIF/difForm.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DIF/difForm.html.twig
@@ -332,7 +332,7 @@
                 <table width="100%">
                     <tr>
                         <td>Others:</td>
-                        <td>{{ form_widget(form.nationalDataArchiveOther) }}</td>
+                        <td width="100%">{{ form_widget(form.nationalDataArchiveOther) }}</td>
                     </tr>
                 </table>
             </div>
