Fixed load form UDI in url.

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DIF/difForm.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DIF/difForm.html.twig
@@ -3,6 +3,7 @@
       method="post" 
       researchgroup="{{ path('pelagos_api_research_groups_get_collection') }}"
       personresearchgroup="{{ path('pelagos_api_person_research_groups_get_collection') }}"
+      dataset="{{ path('pelagos_api_datasets_get_collection') }}"
 >
     <input type="hidden" id="id" name="id">
     <input type="hidden" id="status" name="status" value="0">
