Fixed up Data Manager DIF approved email template.

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DIF/email/data-managers/data-managers.dif-approved.email.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DIF/email/data-managers/data-managers.dif-approved.email.twig
@@ -1,9 +1,25 @@
-Dear {{dm.firstName}} {{dm.lastName}},<br>
-<br>
-A Dataset Information Form for dataset {{data.udi}} has been approved by the Gulf of Mexico Research Initiative Information and Data Cooperative (GRIIDC) for {{rcbyudi.Title}}.<br>
-<br>
-Thank you,<br>
-<br>
-The GRIIDC Team<br>
-<br>
-*You are receiving this email because you are identified as a data manager for a Gulf of Mexico Research Initiative Research Consortium. If you believe you should not be receiving this email please notify <a href="mailto:griidc@gomri.org">griidc@gomri.org</a>.*
+{% block subject '[GRIIDC] DIF Approved' %}
+
+{% block body_html %}
+    Dear {{ dataManager.firstName }} {{ dataManager.lastName }},<br>
+    <br>
+    A Dataset Information Form for dataset {{ udi }} has been approved by the Gulf of Mexico Research Initiative Information and Data Cooperative (GRIIDC) for {{ researchGroup.title }}.<br>
+    <br>
+    Thank you,<br>
+    <br>
+    The GRIIDC Team<br>
+    <br>
+    *You are receiving this email because you are identified as a data manager for a Gulf of Mexico Research Initiative Research Consortium. If you believe you should not be receiving this email please notify <a href="mailto:griidc@gomri.org">griidc@gomri.org</a>.*
+{% endblock %}
+
+{% block body_text %}
+Dear {{ dataManager.firstName }} {{ dataManager.lastName }},
+
+A Dataset Information Form for dataset {{ udi }} has been approved by the Gulf of Mexico Research Initiative Information and Data Cooperative (GRIIDC) for {{ researchGroup.title }}.
+
+Thank you,
+
+The GRIIDC Team
+
+*You are receiving this email because you are identified as a data manager for a Gulf of Mexico Research Initiative Research Consortium. If you believe you should not be receiving this email please notify griidc@gomri.org.*
+{% endblock %}
