--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DIF/email/data-managers/data-managers.dif-submitted.email.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DIF/email/data-managers/data-managers.dif-submitted.email.twig
@@ -1,9 +1,25 @@
-Dear {{dm.firstName}} {{dm.lastName}},<br>
-<br>
-A Dataset Information Form (DIF) has been saved and submitted to the Gulf of Mexico Research Initiative Information and Data Cooperative (GRIIDC) by {{data.user.firstName}} {{data.user.lastName}} for dataset {{data.udi}}. {{data.user.firstName}} {{data.user.lastName}} is a member of {{ data.user.RCs | join(', ') }} and the DIF submitted is associated with {{rcbyudi.Title}}.<br>
-<br>
-Thank you,<br>
-<br>
-The GRIIDC Team<br>
-<br>
-*You are receiving this email because you are identified as a data manager for a Gulf of Mexico Research Initiative Research Consortium. If you believe you should not be receiving this email please notify <a href="mailto:griidc@gomri.org">griidc@gomri.org</a>.*
+{% block subject '[GRIIDC] DIF Submitted' %}
+
+{% block body_html %}
+    Dear {{ dataManager.firstName }} {{ dataManager.lastName }},<br>
+    <br>
+    A Dataset Information Form (DIF) has been saved and submitted to the Gulf of Mexico Research Initiative Information and Data Cooperative (GRIIDC) by {{ user.firstName }} {{ user.lastName }} for dataset {{ udi }}. {{ user.firstName }} {{ user.lastName }} is a member of {{ user.researchGroups | join(', ') }} and the DIF submitted is associated with {{ researchGroup.title }}.<br>
+    <br>
+    Thank you,<br>
+    <br>
+    The GRIIDC Team<br>
+    <br>
+    *You are receiving this email because you are identified as a data manager for a Gulf of Mexico Research Initiative Research Consortium. If you believe you should not be receiving this email please notify <a href="mailto:griidc@gomri.org">griidc@gomri.org</a>.*
+{% endblock %}
+
+{% block body_text %}
+Dear {{ dataManager.firstName }} {{ dataManager.lastName }},
+
+A Dataset Information Form (DIF) has been saved and submitted to the Gulf of Mexico Research Initiative Information and Data Cooperative (GRIIDC) by {{ user.firstName }} {{ user.lastName }} for dataset {{ udi }}. {{ user.firstName }} {{ user.lastName }} is a member of {{ user.researchGroups | join(', ') }} and the DIF submitted is associated with {{ researchGroup.title }}.
+
+Thank you,
+
+The GRIIDC Team
+
+*You are receiving this email because you are identified as a data manager for a Gulf of Mexico Research Initiative Research Consortium. If you believe you should not be receiving this email please notify griidc@gomri.org.*
+{% endblock %}
