Fixed subject for Data Managers DIF unlocked email template.

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DIF/email/data-managers/data-managers.dif-unlocked.email.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DIF/email/data-managers/data-managers.dif-unlocked.email.twig
@@ -1,4 +1,4 @@
-{% block subject '[GRIIDC] DIF Submitted' %}
+{% block subject '[GRIIDC] DIF Unlocked' %}
 
 {% block body_html %}
     Dear {{ dataManager.firstName }} {{ dataManager.lastName }},<br>
