--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DIF/email/data-managers/data-managers.dif-unlocked.email.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DIF/email/data-managers/data-managers.dif-unlocked.email.twig
@@ -1,21 +1,21 @@
 {% block subject '[GRIIDC] DIF Unlocked' %}
 
 {% block body_html %}
-    Dear {{ dataManager.firstName }} {{ dataManager.lastName }},<br>
-    <br>
-    The Gulf of Mexico Research Initiative Information and Data Cooperative (GRIIDC) has approved a request to unlock the Dataset Information Form (DIF) for dataset {{ udi }} submitted by {{ user.firstName }} {{ data.user.lastName }}.<br>
-    <br>
-    Thank you,<br>
-    <br>
-    The GRIIDC Team<br>
-    <br>
-    *You are receiving this email because you are identified as a data manager for a Gulf of Mexico Research Initiative Research Consortium. If you believe you should not be receiving this email please notify <a href="mailto:griidc@gomri.org">griidc@gomri.org</a>.*
+Dear {{ recipient.firstName }} {{ recipient.lastName }},<br>
+<br>
+The Gulf of Mexico Research Initiative Information and Data Cooperative (GRIIDC) has approved a request to unlock the Dataset Information Form (DIF) for dataset {{ dif.dataset.udi }} submitted by {{ user.firstName }} {{ user.lastName }}.<br>
+<br>
+Thank you,<br>
+<br>
+The GRIIDC Team<br>
+<br>
+*You are receiving this email because you are identified as a data manager for a Gulf of Mexico Research Initiative Research Consortium. If you believe you should not be receiving this email please notify <a href="mailto:griidc@gomri.org">griidc@gomri.org</a>.*
 {% endblock %}
 
 {% block body_text %}
-Dear {{ dataManager.firstName }} {{ dataManager.lastName }},
+Dear {{ recipient.firstName }} {{ recipient.lastName }},
 
-The Gulf of Mexico Research Initiative Information and Data Cooperative (GRIIDC) has approved a request to unlock the Dataset Information Form (DIF) for dataset {{ udi }} submitted by {{ user.firstName }} {{ data.user.lastName }}.
+The Gulf of Mexico Research Initiative Information and Data Cooperative (GRIIDC) has approved a request to unlock the Dataset Information Form (DIF) for dataset {{ dif.dataset.udi }} submitted by {{ user.firstName }} {{ user.lastName }}.
 
 Thank you,
 
