--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DIF/email/data-managers/data-managers.dif-created.email.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DIF/email/data-managers/data-managers.dif-created.email.twig
@@ -1,21 +1,21 @@
 {% block subject '[GRIIDC] DIF Created' %}
 
 {% block body_html %}
-    Dear {{ dataManager.firstName }} {{ dataManager.lastName }},<br>
-    <br>
-    This email is to notify you that a Dataset Information Form (DIF) has been created by {{ user.firstName }} {{ user.lastName }}. The DIF {{ udi }} has been saved, but has not yet been submitted to the Gulf of Mexico Research Initiative Information and Data Cooperative (GRIIDC) for review and approval. {{ user.firstName }} {{ user.lastName }} is a member of {{ user.researchGroups | join(', ') }} and the dataset is associated with {{ researchGroup.title }}.<br>
-    <br>
-    Thank you,<br>
-    <br>
-    The GRIIDC Team<br>
-    <br>
-    *You are receiving this email because you are identified as a data manager for a Gulf of Mexico Research Initiative Research Consortium. If you believe you should not be receiving this email please notify <a href="mailto:griidc@gomri.org">griidc@gomri.org</a>.*
+Dear {{ recipient.firstName }} {{ recipient.lastName }},<br>
+<br>
+This email is to notify you that a Dataset Information Form (DIF) has been created by {{ user.firstName }} {{ user.lastName }}. The DIF {{ dif.dataset.udi }} has been saved, but has not yet been submitted to the Gulf of Mexico Research Initiative Information and Data Cooperative (GRIIDC) for review and approval. {{ user.firstName }} {{ user.lastName }} is a member of {{ user.researchGroupNames | join(', ') }} and the dataset is associated with {{ dif.researchGroup.name }}.<br>
+<br>
+Thank you,<br>
+<br>
+The GRIIDC Team<br>
+<br>
+*You are receiving this email because you are identified as a data manager for a Gulf of Mexico Research Initiative Research Consortium. If you believe you should not be receiving this email please notify <a href="mailto:griidc@gomri.org">griidc@gomri.org</a>.*
 {% endblock %}
 
 {% block body_text %}
-Dear {{ dataManager.firstName }} {{ dataManager.lastName }},
+Dear {{ recipient.firstName }} {{ recipient.lastName }},
 
-This email is to notify you that a Dataset Information Form (DIF) has been created by {{ user.firstName }} {{ user.lastName }}. The DIF {{ udi }} has been saved, but has not yet been submitted to the Gulf of Mexico Research Initiative Information and Data Cooperative (GRIIDC) for review and approval. {{ user.firstName }} {{ user.lastName }} is a member of {{ user.researchGroups | join(', ') }} and the dataset is associated with {{ researchGroup.title }}.
+This email is to notify you that a Dataset Information Form (DIF) has been created by {{ user.firstName }} {{ user.lastName }}. The DIF {{ dif.dataset.udi }} has been saved, but has not yet been submitted to the Gulf of Mexico Research Initiative Information and Data Cooperative (GRIIDC) for review and approval. {{ user.firstName }} {{ user.lastName }} is a member of {{ user.researchGroupNames | join(', ') }} and the dataset is associated with {{ dif.researchGroup.name }}.
 
 Thank you,
 
