--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DIF/email/data-managers/data-managers.dif-created.email.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DIF/email/data-managers/data-managers.dif-created.email.twig
@@ -3,7 +3,7 @@
 {% block body_html %}
 Dear {{ recipient.firstName }} {{ recipient.lastName }},<br>
 <br>
-This email is to notify you that a Dataset Information Form (DIF) has been created by {{ user.firstName }} {{ user.lastName }}. The DIF {{ dif.dataset.udi }} has been saved, but has not yet been submitted to the Gulf of Mexico Research Initiative Information and Data Cooperative (GRIIDC) for review and approval. {{ user.firstName }} {{ user.lastName }} is a member of {{ user.researchGroupNames | join(', ') }} and the dataset is associated with {{ dif.researchGroup.name }}.<br>
+This email is to notify you that a Dataset Information Form (DIF) has been created by {{ user.firstName }} {{ user.lastName }}. The DIF {{ dif.dataset.udi }} has been saved, but has not yet been submitted to the Gulf of Mexico Research Initiative Information and Data Cooperative (GRIIDC) for review and approval. {{ user.firstName }} {{ user.lastName }} is a member of {{ user.getResearchGroupNames() | join(', ') }} and the dataset is associated with {{ dif.researchGroup.name }}.<br>
 <br>
 Thank you,<br>
 <br>
@@ -15,7 +15,7 @@ The GRIIDC Team<br>
 {% block body_text %}
 Dear {{ recipient.firstName }} {{ recipient.lastName }},
 
-This email is to notify you that a Dataset Information Form (DIF) has been created by {{ user.firstName }} {{ user.lastName }}. The DIF {{ dif.dataset.udi }} has been saved, but has not yet been submitted to the Gulf of Mexico Research Initiative Information and Data Cooperative (GRIIDC) for review and approval. {{ user.firstName }} {{ user.lastName }} is a member of {{ user.researchGroupNames | join(', ') }} and the dataset is associated with {{ dif.researchGroup.name }}.
+This email is to notify you that a Dataset Information Form (DIF) has been created by {{ user.firstName }} {{ user.lastName }}. The DIF {{ dif.dataset.udi }} has been saved, but has not yet been submitted to the Gulf of Mexico Research Initiative Information and Data Cooperative (GRIIDC) for review and approval. {{ user.firstName }} {{ user.lastName }} is a member of {{ user.getResearchGroupNames() | join(', ') }} and the dataset is associated with {{ dif.researchGroup.name }}.
 
 Thank you,
 
