--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DIF/email/users/user.approved.email.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DIF/email/users/user.approved.email.twig
@@ -1,9 +1,9 @@
 {% block subject '[GRIIDC] DIF Approved' %}
 
 {% block body_html %}
-    Congratulations {{ person.getFirstName }} {{ person.getLastName }},<br />
+    Congratulations {{ recipient.getFirstName }} {{ recipient.getLastName }},<br />
     <br />
-    Your Dataset Information Form (DIF) <a href="{{ url('pelagos_app_ui_dif_default') }}?id={{ udi }}">{{ udi }}</a> has been approved by the Gulf of Mexico Research Initiative Information and Data Cooperative (GRIIDC).
+    Your Dataset Information Form (DIF) <a href="{{ url('pelagos_app_ui_dif_default') }}?id={{ dif.dataset.udi }}">{{ dif.dataset.udi }}</a> has been approved by the Gulf of Mexico Research Initiative Information and Data Cooperative (GRIIDC).
     <br>
     You will now be able to register the associated dataset at https://data.gulfresearchinitiative.org/dataset-registration.
     <br>
@@ -14,9 +14,9 @@
 {% endblock %}
 
 {% block body_text %}
-Congratulations {{ person.getFirstName }} {{ person.getLastName }},
+Congratulations {{ recipient.getFirstName }} {{ recipient.getLastName }},
 
-Your Dataset Information Form (DIF) {{ url('pelagos_app_ui_dif_default') }}?id={{ udi }} has been approved by the Gulf of Mexico Research Initiative Information and Data Cooperative (GRIIDC).
+Your Dataset Information Form (DIF) {{ url('pelagos_app_ui_dif_default') }}?id={{ dif.dataset.udi }} has been approved by the Gulf of Mexico Research Initiative Information and Data Cooperative (GRIIDC).
 
 You will now be able to register the associated dataset at https://data.gulfresearchinitiative.org/dataset-registration.
 
