--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/index.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/index.html.twig
@@ -46,11 +46,11 @@
 <table border="0" style="height:100%;width:100%;">
     <tr>
         <td width="60%" style="vertical-align: top; background: transparent;">
-        {% include 'PelagosAppBundle:Registry:registry-form.html.twig' %}
+        {% include 'PelagosAppBundle:DatasetSubmission:form.html.twig' %}
         </td>
         <td width="*">&nbsp;&nbsp;</td>
         <td width="40%" style="vertical-align: top; background: transparent;">
-            {% include 'PelagosAppBundle:Registry:registry-tree.html.twig' %}
+            {% include 'PelagosAppBundle:DatasetSubmission:tree.html.twig' %}
         </td>
     </tr>
 </table>
