Changed subject line of one of the mailers.

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DIF/email/users/submit.email.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DIF/email/users/submit.email.twig
@@ -1,4 +1,4 @@
-{% block subject '[GRIIDC] DIF Unlocked Request' %}
+{% block subject 'GRIIDC DIF Submitted' %}
 
 {% block body_html %}
 Dear {{ recipient.getFirstName }} {{ recipient.getLastName }},<br />
