Template typo fixes.

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DIF/email/reviewers/reviewers.dif-unlock-requested.email.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DIF/email/reviewers/reviewers.dif-unlock-requested.email.twig
@@ -1,4 +1,4 @@
-{% block subject '[GRIIDC] DIF Unlocked Request' %}
+{% block subject '[GRIIDC] DIF Unlock Requested' %}
 
 {% block body_html %}
     Dear DIF Approver(s),<br>
